--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   overflow-x: hidden;
 }
 
-#check {
+.check {
   height: 20px;
   width: 20px;
   position: absolute;
@@ -88,7 +88,7 @@ body {
   border: 1px solid rgb(11, 172, 11);
 }
 
-#trach {
+.trach {
   height: 20px;
   width: 20px;
   position: absolute;
@@ -120,4 +120,9 @@ body {
 
 .element:hover {
   transform: scale(1.1);
+}
+
+.completed {
+  text-decoration: line-through;
+  opacity: 0.5;
 }
